--- a/config/parameters.yml
+++ b/config/parameters.yml
@@ -1,2 +1,2 @@
 parameters:
-    roots.discordnotifications.tables.demo_table: '%core.table_prefix%demo_table'
+    roots.discordnotifications.tables.notifications: '%core.table_prefix%notifications'
