Forum notification settings on ACP page are now retained on submit. Enabling/disabling forum notification settings are now fully complete and functional. Refactored ACP module page to improve readability.

--- a/config/services.yml
+++ b/config/services.yml
@@ -6,6 +6,7 @@ services:
         class: roots\discordnotifications\notification_service
         arguments:
             - '@config'
+            - '@dbal.conn'
 
     roots.discordnotifications.listener:
         class: roots\discordnotifications\event\notification_event_listener
