Added new language file for constructing notification messages. Added utility function to remove HTML + BBcode formatting from footer previews.

--- a/config/services.yml
+++ b/config/services.yml
@@ -11,6 +11,7 @@ services:
     roots.discordnotifications.listener:
         class: roots\discordnotifications\event\notification_event_listener
         arguments:
+            - '@language'
             - '@roots.discordnotifications.notification_service'
         tags:
             - { name: event.listener }
