--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "phpbb-extension",
     "description": "Publishes forum event notifications to a Discord server channel",
     "homepage": "https://github.com/rootslinux/phpbb-discord-notifications",
-    "version": "1.0.0-dev",
+    "version": "1.0.0",
     "time": "2018-10-14",
     "license": "GPL-2.0-only",
     "authors": [
