--- a/config/services.yml
+++ b/config/services.yml
@@ -7,6 +7,7 @@ services:
         arguments:
             - '@config'
             - '@dbal.conn'
+            - '@log'
 
     roots.discordnotifications.listener:
         class: roots\discordnotifications\event\notification_event_listener
