--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="Discord Notifications Build Script" description="Builds an extension.zip from a git repository" default="all">
-	<property name="vendor-name" value="roots" />
+	<property name="vendor-name" value="mober" />
 	<property name="extension-name" value="discordnotifications" />
 	<!--
 	Only set this to "true" if you have dependencies in the composer.json,
